# kvsns

./: .checkpatch.conf  .gitignore  CMakeLists.txt  TEST_HOWTO.txt  add_spec_meson.sh  cov.sh  extstore.h  kvsal_redis.c  kvsns.c  kvsns.h  kvsns.ini  kvsns_dir.c  kvsns_file.c  kvsns_file_test.c  kvsns_file_test_unlink_on_close.c  kvsns_file_test_write.c  kvsns_handle.c  kvsns_internal.c  kvsns_internal.h  kvsns_test.c  kvsns_xattr.c  kvsnssh.c  libkvsns.pc-in.cmake  libkvsns.spec-in.cmake  libkvsns.spec-in.meson  meson.build  meson_options.txt  set_clovis_env.sh
doc/: kvsns_design.txt  kvsns_env_var.txt
extstore/: CMakeLists.txt  extstore.h  extstore_cp_from.c  extstore_cp_to.c  meson.build
extstore/crud_cache/: CMakeLists.txt  extstore.c  extstore_crud_cache.c  meson.build  objstore_cmd.c
extstore/crud_cache/external_cmd/: CMakeLists.txt  extstore.c  extstore_crud_cache_cmd.c  meson.build
extstore/m0store/: CMakeLists.txt  extstore.c  m0store.c  m0store.h  m0store_cp_from.c  m0store_cp_to.c  setenv_mero1.sh  setenv_mero4.sh
extstore/mero/: CMakeLists.txt  extstore.c  howto.txt  m0store_cp_from.c  m0store_cp_to.c
extstore/motr/: CMakeLists.txt  extstore_motr.c  m0store_cp_from.c  m0store_cp_from_bulk.c  m0store_cp_to.c  m0store_cp_to_bulk.c  meson.build  test.sh  test_final.sh
extstore/posix_obj/: CMakeLists.txt  extstore.c
extstore/posix_store/: CMakeLists.txt  extstore.c  extstore_posix.c  meson.build
extstore/rados/: CMakeLists.txt  extstore.c  extstore_rados.c  meson.build
hash/: CMakeLists.txt  README.md  hashlib.c  macaddr.c  macaddr.h  meson.build  murmur3.c  murmur3.h  test_hashlib.c
include/: CMakeLists.txt
include/kvsns/: extstore.h  hashlib.h  kvsal.h  kvsns.h
kvsal/: CMakeLists.txt  kvsal.h  kvsal_redis.c  meson.build
kvsal/mero/: CMakeLists.txt  kvsal_internal.c  kvsal_internal.h  kvsal_mero.c  m0kvs.c  m0kvs.h
kvsal/motr/: CMakeLists.txt  kvsal_motr.c  m0kv_del.c  m0kv_get.c  m0kv_set.c  meson.build
kvsal/redis/: CMakeLists.txt  kvsal_redis.c  kvsal_redis_test.c  meson.build
kvsal/redis/examples/: CMakeLists.txt
kvsal_non_reg/: CMakeLists.txt  kvsal_del_1.c  kvsal_del_many_transaction.c  kvsal_exists_1.c  kvsal_get_1.c  kvsal_get_list.c  kvsal_set_1.c  kvsal_set_many_transaction.c
kvshl/: CMakeLists.txt  kvshl.h
kvshl/redis/: CMakeLists.txt  kvshl_redis.c  kvshl_redis_test.c  titi
kvshl/redis/examples/hiredis/: CMakeLists.txt
kvsns/: CMakeLists.txt  kvsns_copy.c  kvsns_file.c  kvsns_handle.c  kvsns_init.c  kvsns_internal.c  kvsns_internal.h  kvsns_xattr.c  meson.build
kvsns_attach/: CMakeLists.txt  kvsns_attach.c  meson.build
kvsns_hsm/: CMakeLists.txt  kvsns_hsm.c  meson.build
kvsns_script/: CMakeLists.txt  kvsns_do_op.c  kvsns_script.c  kvsns_script_DOC.md  meson.build
kvsns_script/test_scripts/: kvsal.rddir  rddir.kvsns  simple.kvsns
kvsns_shell/: CMakeLists.txt  MakeCmd.sh  kvsns_busybox.c  kvsns_cp.c  kvsns_cp_bulk.c  meson.build  test_final.sh
m0store/: CMakeLists.txt  extstore.c  extstore.h  extstore_test.c  extstore_test_mt.c  m0store.c  m0store.h  test_routines.c
mero/: CMakeLists.txt  m0common.c  m0common.h
motr/: CMakeLists.txt  m0common.c  m0common.h  meson.build
motr/scripts/: m0cat.sh  m0cp.sh  m0kv.sh  mcp.sh  parse_htcl.sh  write_kvsini.sh
posix_obj/: CMakeLists.txt
posix_store/: CMakeLists.txt  extstore.c  extstore.h
scripts/: cp_get.sh  cp_put.sh  kvsns.ini  kvsns_phobos_get.sh  kvsns_phobos_put.sh
scripts/git_hooks/: install_git_hooks.sh  pre-commit
tests/: CMakeLists.txt  kvsns_file_test_unlink_on_close.c  kvsns_file_test_write.c  kvsns_test.c  meson.build
