kvsns_test_exe = executable('kvsns_test',
			    'kvsns_test.c',
			    dependencies : kvsns_dep)

kvsns_file_test_unlink_on_close_exe = executable('kvsns_file_test_unlink_on_close',
					         'kvsns_file_test_unlink_on_close.c',
			    			 dependencies : kvsns_dep)

kvsns_file_test_write_exe = executable('kvsns_file_test_write',
				       'kvsns_file_test_write.c',
			    	       dependencies : kvsns_dep)
