extstore_crud_cache_cmd_lib_srcs = 'extstore_crud_cache_cmd.c'
extstore_crud_cache_cmd_lib = shared_library('extstore_crud_cache_cmd', extstore_crud_cache_cmd_lib_srcs)
# target_link_libraries(['extstore_crud_cache_cmd', 'ini_config'])
# install(['TARGETS', 'extstore_crud_cache_cmd', 'DESTINATION', 'lib'])
